# dxdispatch

./: CMakeLists.txt  README.md
cmake/: direct3d.cmake  directml.cmake  dxc.cmake  pix.cmake  wil.cmake
doc/: Backlog.md
models/: dml_cumulative_product.json  dml_element_wise_add.json  dml_element_wise_identity.json
src/dxdispatch/: CommandLineArgs.cpp  CommandLineArgs.h  DmlDispatchable.cpp  DmlDispatchable.h  Executor.cpp  pch.h
src/model/: JsonParsers.cpp  JsonParsersGenerated.cpp  Model.cpp  Model.h
tools/: GenerateParsingHelpers.ps1
